BaseConnection: avoid unregistering bus name twice.

I have a Gabble currently running with four open connections but only
one corresponding bus name. Here's what I think happened:

• I undocked my laptop. This got rid of the wired connection, but MC
  doesn't notice so the connections stayed open.
• I switched to Offline in Empathy. This made MC call Disconnect() on
  Gabble. The connection released its bus name (because tp-glib does
  this in change_status(Disconnected)), but stayed alive waiting for
  some callbacks.
• I switched back to Online. A new connection was made; it claimed the
  same bus name.
• Finally the callbacks fired, and thus the old connection was unreffed
  and could be disposed. In _dispose(), TpBaseConnection drops its bus
  name again.

This patch ensures that the name is released at most once, which should
fix this issue. I don't have a test case.

Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=32184>
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>